# veronika-vacuum-manager

./: README.md  TEST_COVERAGE_ANALYSIS.md  hacs.json  pyproject.toml  test_import.py
.github/workflows/: tests.yml
custom_components/veronika/: __init__.py  binary_sensor.py  const.py  manager.py  manifest.json  sensor.py  services.yaml  switch.py  utils.py
custom_components/veronika/www/: veronika-plan-card.js
tests/: conftest.py  test_manager.py  test_utils.py
www/: veronika-plan-card.js
